--- a/docs/FAQ
+++ b/docs/FAQ
@@ -27,21 +27,7 @@ Note: This question was really critical in the 1.0.x release, and is
    almost unneeded on the 1.3+ releases.
 
 
-A1.2: One admin has noticed that recent versions of stunnel are built with
-libwrap/tcpwrappers support. Make certain that either you have
-configured tcpwrappers AND and portblocking / firewalling rules correctly
-to allow your client machines to connect.
-
-The best way to test this is to also have your server configured to be
-able to run up2date/rhn_register itself. If you can run rhn_register
-from your server, and it seems to work, but no other machine
-can, its a firewall/security/networking issue.
-
-Note: that this answer only applies to the 1.0.x releases- 1.3+ does 
-not use stunnel.
-
-
-A1.3: If you get SSL errors, check that your RHNS-CA-CERT file is correct
+A1.2: If you get SSL errors, check that your RHNS-CA-CERT file is correct
 _very_ carefully. Current is now over a year old (yay!) and my test cert
 just quit working - look to make sure your CA cert or server cert hasn't
 expired.
@@ -90,13 +76,30 @@ should work well for this. This was fixed in 1.0.1.
 A4.2 This is still a concern in 1.3+ - you must stop apache, use cadmin,
 and then start apache - there are no exceptions.
 
+A4.3 In Current version 1.5+ this is no longer an issue as we are using
+an SQL database backend.
 
 ----------------------------------------------------------------------------
 Q5. What versions of the up2date client API are supported?
 
-A5. The 2.7 version of the API is fully supported with the exception of
+A5.1 The 2.7 version of the API is fully supported with the exception of
 server-pushed actions.  The 2.5 version is no longer (and never will be again)
 supported.  In fact, it never existed.  2.5 was all a big government
 conspiracy deliberately aimed at Open Source.  These are not the API calls
-you are looking for; go on about your business.  2.9 APIs will be
-supported at some point in the near future.
+you are looking for; go on about your business. 
+
+A5.2 Now that we are in the year 2005 (the above answer must be '03 ventage 
+or earlier) we support Up2date version 4.3 and down.  We support the
+server-push actions by always telling the client that there's nothing
+to do.
+
+----------------------------------------------------------------------------
+Q6. I'm using PostgreSQL, and I keep getting "Operational error in
+'INIT'" in my current.log file.  No cadmin commands that touch the
+database work.  What do I do?
+
+A6.1 This applies to Current version 1.5 and greater.  In Fedora Core 2 
+and 3 there were postgresql-python packages that are very broken and will
+not run any SQL commands.  Make sure you are running the latest
+postgresql pacakges for FC2 and FC3 which fix this problem.
+
