Due to lack of popular complaint...Current 1.6.0 Final.
git-svn-id: http://current.tigris.org/svn/current/trunk@166 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
                         Current Project Changelog
 
+* Mon Mar 21 2005 Jack Neely <jjneely@gmail.com>
+- Current 1.6.0
+- Some very minor documentation tweeks regarding generating SSL certs
+
 * Sun Feb 27 2005 Jack Neely <jjneely@gmail.com>
 - Current 1.5.91 AKA 1.6.0 Release Canidate 1
 - Make cadmin use optparse instead of optik
