Fix up some spacing issues.
Add functionality so that cadmin can create users.

Deal with the special case of creating the first existing user.  I do not
want to ship with a default admin user and password.  Assume the first
account the admin creates is the main account for him- (or her) self.


git-svn-id: http://current.tigris.org/svn/current/trunk@269 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/TODO
+++ b/TODO
@@ -56,13 +56,11 @@ Connection: close
  
 * Fixup the perms checking code, and move it to the backend.
 
-* Figure out how the heck to do sub-channels. Have to resolve deps using 
-  the sub-channel and its parent.
-
 * In the new web based, database backed current administrative system
   (which does't exist) it would be cool to include mod_status and 
   mod_config information.
 
+* Authorization
 
 1.8.0 ship checklist
 
