Thanks to Pauline there is no reason not to use authentication in the web interface.  Added Yum support as that's already mostly done.
git-svn-id: http://current.tigris.org/svn/current/trunk@271 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/TODO
+++ b/TODO
@@ -69,6 +69,6 @@ Re-work cadmin into a text based, modular configuration system
 Add input checking into cadmin
 Clean up the cmd line parsing in cadmin
 Add cadmin API calls for querying
-Non-authenticated, web interface for monitoring of clients
+Web interface for monitoring of clients
 Subchannels
-
+Yum Support
