There's been lots of churn...lets snapshot and release as 1.7.5.
git-svn-id: http://current.tigris.org/svn/current/trunk@287 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/TODO
+++ b/TODO
@@ -56,6 +56,8 @@ Connection: close
  
 * Fixup the perms checking code, and move it to the backend.
 
+* Web interface based on the TurboGears toolkit
+
 * In the new web based, database backed current administrative system
   (which does't exist) it would be cool to include mod_status and 
   mod_config information.
