This moves the OU and user API into policy.* as I need to create more functions there.
MySQL is apperently incapable of starting an auto_increment field at 0 so
let's be a little smarter about finding the root OU rather than assuming
it has ID 0.

I'd like to get an OU tree to display in the web UI but these other changes
were needed first.


git-svn-id: http://current.tigris.org/svn/current/trunk@310 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/TODO
+++ b/TODO
@@ -46,6 +46,8 @@ Connection: close
 
 * Exception handling throught code
 
+* Constant, explicit XMLRPC Fault Error codes.
+
 * we ignore channel versions during create/delete/listpackage. Fix that.
   Old channel versions might need to live for up to an hour, to give
   "logged in" clients a chance to expire.
@@ -61,8 +63,6 @@ Connection: close
 * In the new web based, database backed current administrative system
   (which does't exist) it would be cool to include mod_status and 
   mod_config information.
-
-* Authorization
 
 1.8.0 ship checklist
 
